fix: image size and title align

--- a/src/Resources/Pages/HomePage/Scss/style.scss
+++ b/src/Resources/Pages/HomePage/Scss/style.scss
@@ -98,16 +98,33 @@
     opacity: 0;
 }
 
+.slide_title{
+    color: #ffffff;
+    font-family: sans-serif;
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-align: center;
+    margin: 0 0 1rem 0;
+    display: inline-block;
+    width: 100%;
+    text-decoration: none;
+}
+
 .slide_image_wrapper{
     position: relative;
+    padding-top: 1rem;
     display: flex;
-    align-items: center;
+    max-height: 95vh;
+    max-width: 90vw;
+    margin: auto;
     justify-content: center;
-    min-height: 40vh;
+
 }
 
 .slide_image{
     transition: opacity 0.2s ease;
+    width: 100%;
+    object-fit: contain;
 }
 
 .slide_image--hidden{
